@@ -13,13 +13,13 @@ SIR_CFLAGS		:= $(subst ",,$(LIRC_SIR_CFLAGS) \
 				-DLIRC_PORT=$(LIRC_SIR_PORT) \
 				-DLIRC_IRQ=$(LIRC_SIR_IRQ) )
 
-KSRC=/usr/src/linux/$(shell uname -r)/build
+KSRC=/lib/modules/$(shell uname -r)/build
 KERNEL_LOCATION = $(KSRC)
 CC = gcc -D__KERNEL__ -I $(KSRC)/include
 CFLAGS= -O2 -g -Wall
 DEFS=-DHAVE_CONFIG_H -I. -I../..
 
-KVERS=$(shell sed -n -e '/UTS_RELEASE/s/^[^"]*"\([^"]*\)".*$\/\1/p' $(KSRC)/include/linux/version.h)
+KVERS=$(shell sed -n -e '/UTS_RELEASE/s/^[^"]*"\([^"]*\)".*$\/\1/p' $(KSRC)/include/linux/utsrelease.h)
 KPATCHLEVEL=$(shell echo $(KVERS) | sed -n -e 's/^[0-9]*\.\([0-9]*\)\..*/\1/p')
 
 KEXT=o
