@@ -8,7 +8,7 @@ Standards-Version: 3.5.2
 Package: lirc-modules-$KVERS
 Architecture: $KARCH
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Recommends: kernel-image-$KVERS (= $KDREV)
+Recommends: linux-image-$KVERS (= $KDREV)
 Description: Linux Infra-red Remote Control support (binary kernel modules)
  This package contains the LIRC binary kernel modules for linux
  version $KVERS.    
